--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -97,8 +97,11 @@
   .title {
     font-size: 2rem;
   }
+  .details-container p1 p2 {
+    font-size: 1rem;
+  }
   .text-container {
-    text-align: justify;
+    text-align:left;
   }
   .nav-links1 {
     flex-direction: column;
