--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -99,11 +99,11 @@
   }
   .details-container p1{
     color:black;
-    font-size: small;
+    font-size: 0.8em;
   }
   .details-container p2{
     color:rgb(53, 53, 53);
-    font-size: 11px;
+    font-size: 11.5px;
   }
   .text-container {
     text-align: left;
